--- a/main.html
+++ b/main.html
@@ -5,7 +5,12 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-<p>test</p>
-<p>hjbdsfjhbgfdhbj</p>
+<header></header>
+<main>
+    <p>test</p>
+    <p>hjbdsfjhbgfdhbj</p>
+</main>
+<footer></footer>
+
 </body>
 </html>
