--- a/main.html
+++ b/main.html
@@ -7,8 +7,10 @@
 <body>
 <header></header>
 <main>
-    <p>test</p>
-    <p>hjbdsfjhbgfdhbj</p>
+    <h1>SUPER TICTACTOE</h1>
+    
+    <a>SINGLEPLAYER</a>
+    <a>MULLTIPLAYER</a>
 </main>
 <footer></footer>
 
