--- a/main.html
+++ b/main.html
@@ -8,9 +8,10 @@
 <header></header>
 <main>
     <h1>SUPER TICTACTOE</h1>
-    
+
     <a>SINGLEPLAYER</a>
     <a>MULLTIPLAYER</a>
+    <a>SETTINGS</a>
 </main>
 <footer></footer>
 
