--- a/main.html
+++ b/main.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="javascript/javaScript.js"></script>
 </head>
 <body>
-    <p>test push</p>
+<h1>Super Tic Tac Toe</h1>
+<hr>
+<br>
+<!-- 3x3 -->
+<div id="board">
+</div>
 </body>
 </html>
