--- a/main.html
+++ b/main.html
@@ -2,12 +2,18 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    
+<header></header>
+<main>
+    <h1>SUPER TICTACTOE</h1>
+
+    <a>SINGLEPLAYER</a>
+    <a>MULLTIPLAYER</a>
+    <a>SPELREGELS</a>
+</main>
+<footer></footer>
+
 </body>
 </html>
