--- a/main.html
+++ b/main.html
@@ -7,7 +7,25 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
-    
+    <header></header>
+    <main>
+        <h1>SUPER TicTacToe</h1>
+        <figure>
+            <img src="" alt="">
+            <img src="" alt="">
+        </figure>
+        <section class="links">
+            <a href="#">Singleplayer</a>
+            <a href="#">Multiplayer</a>
+            <a href="#">Spelregels</a>
+        </section>
+        <figure>
+            <img src="" alt="">
+            <img src="" alt="">
+        </figure>
+    </main>
+    <footer></footer>
+
+
 </body>
 </html>
