--- a/main.html
+++ b/main.html
@@ -10,9 +10,19 @@
 <main>
     <h1>SUPER TICTACTOE</h1>
 
-    <a>SINGLEPLAYER</a>
-    <a>MULLTIPLAYER</a>
-    <a>SPELREGELS</a>
+    <figure>
+        <img src="" alt="Foto van tictactoe">
+        <img src="" alt="Foto van Mario">
+    </figure>
+
+    <a href="#">Singeplayer</a>
+    <a href="#">Multiplayer</a>
+    <a href="#">Spelregels</a>
+
+    <figure>
+        <img src="" alt="buis">
+        <img src="" alt="buis">
+    </figure>
 </main>
 <footer></footer>
 
