--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="javascript/javaScript.js"></script>
+    <!--<div id="0-0" class="tile"></div>-->
 </head>
 <body>
 <h1>Super Tic Tac Toe</h1>
