TestImageReplacement op buttons -> geen succes :(

--- a/game/index.html
+++ b/game/index.html
@@ -23,8 +23,8 @@
         </div>
         <div id="board"></div>
         <div id="buttons">
-            <button id="reset">reset</button>
-            <button id="menu">menu</button>
+            <button id="resetButton">reset</button>
+            <button id="menuButton">menu</button>
         </div>
     </main>
 </body>
