--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>SUPER TICTACTOE</h1>
 
     <figure>
-        <img src="" alt="Foto van tictactoe">
-        <img src="" alt="Foto van Mario">
+        <img src="./images/ticTacToe.png" alt="Foto van tictactoe">
+        <img src="./images/marioStart.png" alt="Foto van Mario">
     </figure>
 
     <a href="#">Singeplayer</a>
