--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="./images/marioStart.png" alt="Foto van Mario">
     </figure>
 
-    <a href="#">Singeplayer</a>
-    <a href="#">Multiplayer</a>
-    <a href="#">Spelregels</a>
+    <a href="#"><img src="svg/Singleplayer.svg" alt=""></a>
+    <a href="#"><img src="svg/Multiplayer.svg" alt=""></a>
+    <a href="#"><img src="svg/Spelregels.svg" alt=""></a>
 
     <figure>
         <img src="" alt="buis">
