--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./css/common.css" class="css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
+
 <body>
-<header></header>
-<main>
-    <h1>SUPER TICTACTOE</h1>
+    <main>
+        <figure>
+            <img src="./svg/Titel%20game%20mobile.svg" alt="">
+            <img src="./images/ticTacToe.png" alt="Foto van tictactoe">
+            <img src="./images/marioStart.png" alt="Foto van Mario">
+        </figure>
 
-    <figure>
-        <img src="./images/ticTacToe.png" alt="Foto van tictactoe">
-        <img src="./images/marioStart.png" alt="Foto van Mario">
-    </figure>
+        <section class="buttons">
+            <a href="#"><img src="./svg/Singleplayer.svg" alt=""></a>
+            <a href="#"><img src="./svg/Multiplayer.svg" alt=""></a>
+            <a href="#"><img src="./svg/Spelregels.svg" alt=""></a>
+        </section>
 
-    <a href="#"><img src="svg/Singleplayer.svg" alt=""></a>
-    <a href="#"><img src="svg/Multiplayer.svg" alt=""></a>
-    <a href="#"><img src="svg/Spelregels.svg" alt=""></a>
-
-    <figure>
-        <img src="" alt="buis">
-        <img src="" alt="buis">
-    </figure>
-</main>
-<footer></footer>
-
+        <section class="buizen">
+            <img src="./svg/buisGroot.svg" alt="buis">
+            <img src="./svg/buisKlein.svg" alt="buis">
+        </section>
+    </main>
 </body>
 </html>
