js 9 velden, enkel nog 'grote lijnen'

--- a/game/index.html
+++ b/game/index.html
@@ -22,6 +22,15 @@
             <img src="../images/marioIcon.png" alt="mario hoofd" class="icons">
         </div>
         <div id="board">
+            <div class="games" id="game0"></div>
+            <div class="games" id="game1"></div>
+            <div class="games" id="game2"></div>
+            <div class="games" id="game3"></div>
+            <div class="games" id="game4"></div>
+            <div class="games" id="game5"></div>
+            <div class="games" id="game6"></div>
+            <div class="games" id="game7"></div>
+            <div class="games" id="game8"></div>
         </div>
         <div id="buttons">
             <button id="resetButton">reset</button>
