--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+
     <title>Tic Tac Toe</title>
+
     <link rel="stylesheet" href="./css/common.css" class="css">
     <link rel="stylesheet" href="./css/home.css">
 </head>
@@ -10,7 +15,7 @@
 <body>
     <main>
         <figure>
-            <img src="./svg/Titel%20game%20mobile.svg" alt="">
+            <img src="./svg/Titel%20game%20mobile.svg" alt="Titel TicTacToe">
             <img src="./images/ticTacToe.png" alt="Foto van tictactoe">
             <img src="./images/marioStart.png" alt="Foto van Mario">
         </figure>
