--- a/game/index.html
+++ b/game/index.html
@@ -33,8 +33,12 @@
             <div class="games" id="game8"></div>
         </div>
         <div id="buttons">
-            <button id="resetButton">reset</button>
-            <button id="menuButton">menu</button>
+            <div>
+                <button id="resetButton">reset</button>
+            </div>
+            <div>
+                <button id="menuButton">menu</button>
+            </div>
         </div>
     </main>
 </body>
