--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
         </figure>
 
         <section class="buttons">
-            <a href="#"><img src="./svg/Singleplayer.svg" alt=""></a>
+            <a href="./game/index.html"><img src="./svg/Singleplayer.svg" alt=""></a>
             <a href="#"><img src="./svg/Multiplayer.svg" alt=""></a>
-            <a href="#"><img src="./svg/Spelregels.svg" alt=""></a>
+            <a class="spelregels" href="#"><img src="./svg/Spelregels.svg" alt=""></a>
         </section>
 
-        <section class="buizen">
-            <img src="./svg/buisGroot.svg" alt="buis">
-            <img src="./svg/buisKlein.svg" alt="buis">
-        </section>
     </main>
 </body>
 </html>
