--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
             <img src="./images/marioStart.png" alt="Foto van Mario">
         </figure>
 
-        <section class="buttons">
-            <a href="./game/index.html"><img src="./svg/Singleplayer.svg" alt=""></a>
-            <a href="#"><img src="./svg/Multiplayer.svg" alt=""></a>
-            <a class="spelregels" href="#"><img src="./svg/Spelregels.svg" alt=""></a>
+        <section id="buttons">
+            <div>
+                <button id="singleplayer">Singleplayer</button>
+            </div>
+            <div>
+                <button id="multiplayer">Multiplayer</button>
+            </div>
+            <div>
+                <button id="spelregels">Spelregels</button>
+            </div>
         </section>
 
     </main>
