kleine verandering html van home

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <figure>
             <img src="./svg/Titel%20game%20mobile.svg" alt="Titel TicTacToe">
-            <img src="./images/ticTacToe.png" alt="Foto van tictactoe">
-            <img src="./images/marioStart.png" alt="Foto van Mario">
+            <img src="./images/ticTacToe.png" alt="Tictactoe doorzichtig">
+            <img src="./images/marioStart.png" alt="Mario die aan zijn snor voelt">
         </figure>
 
         <section id="buttons">
