--- a/game/index.html
+++ b/game/index.html
@@ -42,5 +42,5 @@
         </div>
     </main>
 </body>
-<script src="../javaScript/javaScript.js"></script>
+<script type="module" src="../javaScript/javaScript.js"></script>
 </html>
