--- a/game/index.html
+++ b/game/index.html
@@ -32,14 +32,14 @@
             <div class="games" id="game7"></div>
             <div class="games" id="game8"></div>
         </div>
-        <div id="buttons">
+        <section id="buttons">
             <div>
                 <button id="resetButton">reset</button>
             </div>
             <div>
                 <button id="menuButton">menu</button>
             </div>
-        </div>
+        </section>
     </main>
 </body>
 <script type="module" src="../javaScript/javaScript.js"></script>
