--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 <body>
     <main>
         <figure>
-            <img src="./svg/Titel%20game%20mobile.svg" alt="Titel TicTacToe">
-            <img src="./images/ticTacToe.png" alt="Tictactoe doorzichtig">
-            <img src="./images/marioStart.png" alt="Mario die aan zijn snor voelt">
+            <img src="./svg/titelMobileThin.svg" alt="Titel TicTacToe">
+            <img src="./svg/titelDesktopThin.svg" alt="Titel TicTacToe">
+            <img src="./images/ticTacToe.png" alt="Foto van TicTacToe">
+            <img src="./images/marioStart.png" alt="Foto van Mario">
+            <img src="./images/bowser.png" alt="Foto van Bowser">
         </figure>
+
+        <div class="foto">
+
+        </div>
 
         <section id="buttons">
             <div>
