--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <img src="./svg/titelMobileThin.svg" alt="Titel TicTacToe">
             <img src="./svg/titelDesktopThin.svg" alt="Titel TicTacToe">
             <img src="./images/ticTacToe.png" alt="Foto van TicTacToe">
-            <img src="./images/marioStart.png" alt="Foto van Mario">
-            <img src="./images/bowser.png" alt="Foto van Bowser">
+            <div class="figures">
+                <img src="./images/marioStart.png" alt="Foto van Mario">
+                <img src="./images/bowser.png" alt="Foto van Bowser">
+            </div>
+
         </figure>
 
         <div class="foto">
