--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,7 @@
                 <p id="hyphen">-</p>
                 <p id="scoreMario">0</p>
             </div>
-            <img src="../images/marioIcon.png" alt="mario hoofd" class="icons">
+            <img src="../images/mario_head.png" alt="mario hoofd" class="icons">
         </div>
         <div id="board">
             <div class="games" id="game0"></div>
