--- a/game/index.html
+++ b/game/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <main>
-        <h1>Super TicTacToe</h1>
+        <img src="../svg/titelMobileThin.svg" alt="Super TicTacToe">
+        <img src="../svg/titelDesktopThin.svg" alt="Super TicTacToe">
         <div class="header">
             <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons">
             <div id="score">
