--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -41,6 +41,25 @@
                 <button id="menuButton">menu</button>
             </div>
         </section>
+        <div id="bowserWins" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Bowser wint! </p>
+            </div>
+
+        </div>
+        <!-- The Modal -->
+        <div id="marioWins" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Mario wint! </p>
+            </div>
+
+        </div>
     </main>
 </body>
 <script type="module" src="../javaScript/javaScript.js"></script>
