--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -45,7 +45,7 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span class="close1">&times;</span>
                 <p>Bowser wint! </p>
             </div>
 
@@ -55,7 +55,7 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span class="close2">&times;</span>
                 <p>Mario wint! </p>
             </div>
 
