spelregels eerste versie

--- a/spelregels/index.html
+++ b/spelregels/index.html
@@ -12,10 +12,18 @@
 <body>
 <main>
     <h1>Spelregels</h1>
-    <div>
+    <div class="textDIV">
         <h2>Doel van het spel</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequuntur dolor, eligendi facilis harum id illo laboriosam non officia sint suscipit totam. Error expedita in magnam nam quam, recusandae! Quas.</p>
+        <p>Het doel van tic-tac-toe is om de eerste speler te zijn die drie op een rij op het 3 x 3 raster krijgt. Elk vak is op zich zelf ook ingedeeld in een 3 x 3 raster. Wie het eerste drie op een rij op het klein raster behaald wint dat raster voor zijn of haar kleur.</p>
+        <h2>Spel verloop</H2>
+        <p>Elke speler mag op de beurt een vakje inkleuren met zijn of haar figuur. De speler die met de X speelt mag altijd beginnen. Je mag elk vakje over heel het spel inkleuren, dus als de tegenspeler net een vakeje heeft ingekleurd moet jij niet in hetzelfde raster spelen. Als een speler een gewonnen is in een bepaalt raster mag er geen vakje van dat raster meer worden ingekleurd. Je blijft elk ont beurt vakjes inkleuren tot er één speler het volledige spel gewonnen heeft.</p>
+        <h2>Win condities</h2>
+        <p>Een speler heeft het volledige spel gewonnen als hij drie rasters op een rij heeft gewonnen, dit kan zowel verticaal als horizontaal en ook diagonaal zijn. Om een raster te winnen moet je ook weer drie vakjes op een rij van jouw figuur hebben ingekleurd, dit kan ook weer verticaal, horizontaal of diagonaal. Als alle 9 vakjes van een raster of ingekleurd zijn maar geen van bij de spelers is gewonnen dan resulteerd dit raster in een gelijkspel. Ook het volledige spel kan eindigen in een gelijk spel. </p>
+    </div>
+    <div class="buttonDIV">
+        <button id="menuButton">menu</button>
     </div>
 </main>
 </body>
+<script src="../javaScript/spelregels.js"></script>
 </html>
