--- a/gameSinglePlayer/index.html
+++ b/gameSinglePlayer/index.html
@@ -42,5 +42,5 @@
         </section>
     </main>
 </body>
-<script type="module" src="../javaScript/javaScript.js"></script>
+<script type="module" src="../javaScript/singleplayer.js"></script>
 </html>
