--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -14,13 +14,13 @@
         <img src="../svg/titelMobileThin.svg" alt="Super TicTacToe">
         <img src="../svg/titelDesktopThin.svg" alt="Super TicTacToe">
         <div class="header">
-            <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons">
+            <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons" id="imgBowser">
             <div id="score">
                 <p id="scoreBowser">0</p>
                 <p id="hyphen">-</p>
                 <p id="scoreMario">0</p>
             </div>
-            <img src="../images/mario_head.png" alt="mario hoofd" class="icons">
+            <img src="../images/mario_head.png" alt="mario hoofd" class="icons" id="imgMario">
         </div>
         <div id="board">
             <div class="games" id="game0"></div>
