--- a/gameSinglePlayer/index.html
+++ b/gameSinglePlayer/index.html
@@ -40,6 +40,25 @@
                 <button id="menuButton">menu</button>
             </div>
         </section>
+        <div id="bowserWins" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close1">&times;</span>
+                <p>You win! </p>
+            </div>
+
+        </div>
+        <!-- The Modal -->
+        <div id="marioWins" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close2">&times;</span>
+                <p>You lose! </p>
+            </div>
+
+        </div>
     </main>
 </body>
 <script type="module" src="../javaScript/singleplayer.js"></script>
