--- a/gameSinglePlayer/index.html
+++ b/gameSinglePlayer/index.html
@@ -13,13 +13,13 @@
     <main>
         <h1>Super TicTacToe</h1>
         <div class="header">
-            <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons">
+            <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons" id="imgBowser">
             <div id="score">
                 <p id="scoreBowser">0</p>
                 <p id="hyphen">-</p>
                 <p id="scoreMario">0</p>
             </div>
-            <img src="../images/mario_head.png" alt="mario hoofd" class="icons">
+            <img src="../images/mario_head.png" alt="mario hoofd" class="icons" id="imgMario">
         </div>
         <div id="board">
             <div class="games" id="game0"></div>
