--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                 <button id="spelregels">Spelregels</button>
             </div>
         </section>
+
+        <section class="buizen">
+            <figure>
+                <img src="./svg/buisGroot.png" alt="Buis">
+                <img src="./svg/buisKlein.png" alt="Buis">
+            </figure>
+        </section>
+
     </main>
     <script src="./javaScript/home.js"></script>
 </body>
