--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <main>
-        <img src="../svg/titelMobileThin.svg" alt="Super TicTacToe">
-        <img src="../svg/titelDesktopThin.svg" alt="Super TicTacToe">
+        <h1 class="titel"></h1>
         <div class="header">
             <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons" id="imgBowser">
             <div id="score">
