--- a/gameSinglePlayer/index.html
+++ b/gameSinglePlayer/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <h1 class="titel">Super TicTacToe</h1>
+        <h1 class="titel"></h1>
         <div class="header">
             <img src="../images/bowserIcon.png" alt="bowser hoofd" class="icons" id="imgBowser">
             <div id="score">
