img bowser/mario winner

--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -45,6 +45,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close1">&times;</span>
+                <img src="/images/bowser.png" alt="bowser">
                 <p>Bowser wint! </p>
             </div>
 
@@ -55,6 +56,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close2">&times;</span>
+                <img src="/images/marioWins.png" alt="mario juicht">
                 <p>Mario wint! </p>
             </div>
 
