kleine aanpassing css

--- a/gameMultiplayer/index.html
+++ b/gameMultiplayer/index.html
@@ -40,24 +40,24 @@
                 <button id="menuButton">menu</button>
             </div>
         </section>
-        <div id="bowserWins" class="modal">
+        <div id="bowserWins" class="modal" aria-expanded="false">
 
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close1">&times;</span>
-                <img src="/images/bowser.png" alt="bowser">
+                <img src="../images/bowser.png" alt="bowser">
                 <p>Bowser wint! </p>
             </div>
 
         </div>
         <!-- The Modal -->
-        <div id="marioWins" class="modal">
+        <div id="marioWins" class="modal" aria-expanded="false">
 
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close2">&times;</span>
-                <img src="/images/marioWins.png" alt="mario juicht">
-                <p>Mario wint! </p>
+                <img src="../images/marioWins.png" alt="mario juicht">
+                <p>Mario wint!</p>
             </div>
 
         </div>
